--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".Tab1" />
-        <activity android:name=".Tab2" />
+        <activity android:name=".HomeAction" />
         <activity android:name=".Register" />
         <activity android:name=".Register_page2" />
         <activity android:name=".Register_page3" />
