--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".Register_page2" />
         <activity android:name=".Register_page3" />
         <activity android:name=".EmergencyCall" />
+        <activity android:name=".SettingDeviceNumber" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
